--- a/roles/ruby/templates/rbenv_user.sh.j2
+++ b/roles/ruby/templates/rbenv_user.sh.j2
@@ -1,5 +1,6 @@
-if [ -d "$HOME/.rbenv" ]; then
-  export PATH=$HOME/.rbenv/bin:$PATH;
-  export RBENV_ROOT=$HOME/.rbenv;
+# rbenv setup
+if [ -d "{{ rbenv_root }}" ]; then
+  export RBENV_ROOT={{ rbenv_root }};
+  export PATH=$RBENV_ROOT/bin:$PATH;
   eval "$(rbenv init -)";
 fi
