--- a/run_once_02_set_macos_defaults.sh.tmpl
+++ b/run_once_02_set_macos_defaults.sh.tmpl
@@ -1,79 +1,57 @@
 #!/bin/bash
 
-# Check for osx-defaults installation
-if ! command -v osx-defaults &>/dev/null; then
-  echo "Error: osx-defaults is not installed. Install it using 'brew install osx-defaults'."
-  exit 1
-fi
+echo "Applying macOS customizations..."
 
+# General UI/UX
+defaults write NSGlobalDomain AppleICUForce12HourTime -bool false            # Use 24-hour time format
+defaults write NSGlobalDomain AppleMeasurementUnits -string "Centimeters"    # Set measurement units to Centimeters
+defaults write NSGlobalDomain AppleMetricUnits -bool true                    # Enable metric units
+defaults write NSGlobalDomain ApplePressAndHoldEnabled -bool false           # Disable press-and-hold for keys
+defaults write NSGlobalDomain AppleShowScrollBars -string "Always"           # Always show scrollbars
+defaults write NSGlobalDomain NSAutomaticSpellingCorrectionEnabled -bool false # Disable auto-correct
+defaults write NSGlobalDomain NSAutomaticWindowAnimationsEnabled -bool false # Disable opening/closing window animations
+defaults write NSGlobalDomain WebKitDeveloperExtras -bool true               # Enable WebKit Developer Extras globally
 
-## Apply settings directly using osx_defaults
+# Keyboard & Mouse
+defaults write com.apple.BezelServices kDimTime -int 300                    # Turn off keyboard backlight after 5 mins
+defaults write com.apple.driver.AppleBluetoothMultitouch.trackpad Clicking -bool true # Enable tap-to-click
 
-# Use 24-hour time format
-osx-defaults write NSGlobalDomain AppleICUForce12HourTime false
-# Set measurement units to Centimeters
-osx-defaults write NSGlobalDomain AppleMeasurementUnits Centimeters
-# Enable metric units
-osx-defaults write NSGlobalDomain AppleMetricUnits true
-# Disable press-and-hold for keys (enable key repeat)
-osx-defaults write NSGlobalDomain ApplePressAndHoldEnabled false
-# Always show scrollbars
-osx-defaults write NSGlobalDomain AppleShowScrollBars Always
-# Disable auto-correct
-osx-defaults write NSGlobalDomain NSAutomaticSpellingCorrectionEnabled false
-# Disable opening and closing window animations
-osx-defaults write NSGlobalDomain NSAutomaticWindowAnimationsEnabled false
-# Enable WebKit Developer Extras globally
-osx-defaults write NSGlobalDomain WebKitDeveloperExtras true
-# Turn off keyboard backlight after 5 minutes of inactivity
-osx-defaults write com.apple.BezelServices kDimTime 300
-# Prevent Photos from opening automatically when devices are plugged in
-osx-defaults write com.apple.ImageCapture disableHotPlug true
-# Disable the "Are you sure you want to open this application?" dialog
-osx-defaults write com.apple.LaunchServices LSQuarantine false
-# Enable AirDrop over all network interfaces
-osx-defaults write com.apple.NetworkBrowser BrowseAllInterfaces 1
-# Enable the Develop menu in Safari
-osx-defaults write com.apple.Safari IncludeDevelopMenu true
-# Enable the internal debug menu in Safari
-osx-defaults write com.apple.Safari IncludeInternalDebugMenu true
-# Enable WebKit Developer Extras in Safari
-osx-defaults write com.apple.Safari WebKitDeveloperExtrasEnabledPreferenceKey true
-# Prevent creation of .DS_Store files on network volumes
-osx-defaults write com.apple.desktopservices DSDontWriteNetworkStores true
-# Prevent creation of .DS_Store files on USB volumes
-osx-defaults write com.apple.desktopservices DSDontWriteUSBStores true
-# Remove auto-hide Dock delay
-osx-defaults write com.apple.dock autohide-delay -float 0
-# Speed up Mission Control animations
-osx-defaults write com.apple.dock expose-animation-duration -float 0.1
-# Set bottom-left screen corner to start screensaver
-osx-defaults write com.apple.dock wvous-bl-corner 5
-# Set bottom-left screen corner with no modifier
-osx-defaults write com.apple.dock wvous-bl-modifier 0
-# Enable tap to click on trackpad
-osx-defaults write com.apple.driver.AppleBluetoothMultitouch.trackpad Clicking 1
-# Show hidden files in Finder
-osx-defaults write com.apple.finder AppleShowAllFiles true
-# Disable all Finder animations
-osx-defaults write com.apple.finder DisableAllAnimations true
-# Disable warning when changing file extensions
-osx-defaults write com.apple.finder FXEnableExtensionChangeWarning false
-# Show full POSIX path in Finder title bar
-osx-defaults write com.apple.finder _FXShowPosixPathInTitle true
-# Prevent iTunes from opening automatically when devices are plugged in
-osx-defaults write com.apple.iTunesHelper ignore-devices 1
-# Show battery percentage in the menu bar
-osx-defaults write com.apple.menuextra.battery ShowPercent -string "YES"
-# Require password immediately after sleep or screen saver begins
-osx-defaults write com.apple.screensaver askForPassword 1
-# Set password delay to 5 seconds
-osx-defaults write com.apple.screensaver askForPasswordDelay 5
+# Finder
+defaults write com.apple.finder AppleShowAllFiles -bool true                # Show hidden files
+defaults write com.apple.finder DisableAllAnimations -bool true             # Disable Finder animations
+defaults write com.apple.finder FXEnableExtensionChangeWarning -bool false  # Disable file extension warning
+defaults write com.apple.finder _FXShowPosixPathInTitle -bool true          # Show full POSIX path in Finder title bar
+
+# Dock
+defaults write com.apple.dock autohide-delay -float 0                       # Remove auto-hide Dock delay
+defaults write com.apple.dock expose-animation-duration -float 0.1          # Speed up Mission Control animations
+defaults write com.apple.dock wvous-bl-corner -int 5                        # Set bottom-left corner to screensaver
+defaults write com.apple.dock wvous-bl-modifier -int 0                      # No modifier key for screensaver
+
+# Safari
+defaults write com.apple.Safari IncludeDevelopMenu -bool true               # Enable Develop menu
+defaults write com.apple.Safari IncludeInternalDebugMenu -bool true         # Enable internal debug menu
+defaults write com.apple.Safari WebKitDeveloperExtrasEnabledPreferenceKey -bool true # Enable WebKit Developer Extras
+
+# System
+defaults write com.apple.ImageCapture disableHotPlug -bool true             # Prevent Photos from auto-opening
+defaults write com.apple.LaunchServices LSQuarantine -bool false            # Disable "open this application?" dialog
+defaults write com.apple.NetworkBrowser BrowseAllInterfaces -bool true      # Enable AirDrop over all interfaces
+defaults write com.apple.menuextra.battery ShowPercent -string "YES"        # Show battery percentage
+
+# Security
+defaults write com.apple.screensaver askForPassword -int 1                  # Require password after sleep/screensaver
+defaults write com.apple.screensaver askForPasswordDelay -int 5             # Set password delay to 5 seconds
+
+# iTunes & .DS_Store
+defaults write com.apple.iTunesHelper ignore-devices -bool true             # Prevent iTunes from auto-opening
+defaults write com.apple.desktopservices DSDontWriteNetworkStores -bool true # Prevent .DS_Store on network volumes
+defaults write com.apple.desktopservices DSDontWriteUSBStores -bool true    # Prevent .DS_Store on USB volumes
+
 
 # Restart affected apps for changes to take effect
 echo "Restarting Dock and Finder to apply changes..."
 killall Dock
 killall Finder
 
-echo "Defaults have been set using osx_defaults."
-
+echo "Defaults have been set"
