--- a/run_once_07_install_ruby.sh.tmpl
+++ b/run_once_07_install_ruby.sh.tmpl
@@ -34,7 +34,7 @@ if ! command -v rbenv >/dev/null; then
 fi
 
 # Install Ruby versions
-RUBY_VERSIONS=("3.1.2" "3.0.0") # Add your desired Ruby versions here
+RUBY_VERSIONS=("3.3.6") # Add your desired Ruby versions here
 for version in "${RUBY_VERSIONS[@]}"; do
   if ! rbenv versions | grep -q "$version"; then
     echo "Installing Ruby $version..."
