Get rid of Voice Dictation

--- a/home/run_once_02_set_macos_defaults.sh.tmpl
+++ b/home/run_once_02_set_macos_defaults.sh.tmpl
@@ -16,6 +16,7 @@ defaults write NSGlobalDomain NSAutomaticWindowAnimationsEnabled -bool false # D
 defaults write NSGlobalDomain NSNavPanelExpandedStateForSaveMode -bool true  # Expand save dialog by default
 defaults write NSGlobalDomain PMPrintingExpandedStateForPrint -bool true     # Expand print dialog by default
 defaults write NSGlobalDomain WebKitDeveloperExtras -bool true               # Enable WebKit Developer Extras globally
+defaults write com.apple.HIToolbox AppleDictationAutoEnable -bool false      # Disable Dictation entirely
 
 # Keyboard & Mouse
 defaults write com.apple.BezelServices kDimTime -int 300                    # Turn off keyboard backlight after 5 mins
