--- a/home/run_once_10_install_homebrew.sh.tmpl
+++ b/home/run_once_10_install_homebrew.sh.tmpl
@@ -10,4 +10,4 @@ else
     echo "Homebrew already installed."
 fi
 
-HOMEBREW_NO_ENV_HINTS=1 HOMEBREW_NO_ANALYTICS=1 brew bundle install --quiet --file=~/.Brewfile
+HOMEBREW_NO_INTERACTIVE=1 HOMEBREW_NO_ENV_HINTS=1 HOMEBREW_NO_ANALYTICS=1 brew bundle install --quiet --file=~/.Brewfile
